Avoid prosemirror menu wrapping in item and hazard sheets (#19330)

--- a/src/styles/actor/character/_biography.scss
+++ b/src/styles/actor/character/_biography.scss
@@ -175,9 +175,6 @@
 
             &.prosemirror {
                 height: 13.5rem; // When the editor is open, fill more space
-                .editor-container {
-                    margin: var(--space-4) 0;
-                }
             }
         }
     }
