--- a/src/styles/actor/party/kingdom/_world.scss
+++ b/src/styles/actor/party/kingdom/_world.scss
@@ -183,9 +183,6 @@ input[type="number"] {
 
         &.prosemirror {
             min-height: 15rem; // When the editor is open, fill more space
-            .editor-container {
-                margin: var(--space-4) 0;
-            }
         }
     }
 }
