--- a/src/styles/item/_nav.scss
+++ b/src/styles/item/_nav.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex: 0 0 1.75rem;
     line-height: 1.75rem;
+    margin: var(--space-4) 0;
 
     a {
         flex: 1 1 auto;
